configuracion del servicio para guardar información de un paso de forma dinámica a partir de la parametrizacion
