# src/api/swagger/m.step.swagger.yaml
@@ -252,3 +252,25 @@
         description: Server error
         schema:
           $ref: "#/definitions/Error"
+
+/api/m/steps/{step}/origin:
+  x-swagger-router-controller: m.step.controller
+  put:
+    operationId: setOriginStep
+    tags:
+      - M/Steps
+    summary: Set origin step
+    description: Set origin step
+    parameters:
+      - name: step
+        in: path
+        type: string
+        description: Step ID
+        required: true
+    responses:
+      200:
+        description: Set origin step
+      500:
+        description: Server error
+        schema:
+          $ref: "#/definitions/Error"
